--- a/index.html
+++ b/index.html
@@ -46,6 +46,251 @@
 
     </header>
 
+    <section class="main">
+        <h1>
+            Авторскі десерти
+        </h1>
+
+        <img src="./img/heder/custard pudding.png">
+        <img src="./img/heder/circlet.png">
+        <img src="./img/heder/hardening.png">
+        <img src="./img/heder/mousse cakes.png">
+
+        <p>Виготовляємо десерти під замовлення з любов’ю та користю</p>
+
+        <svg>
+            <use href="./svg/telegram.svg">
+            </use>
+        </svg>
+        <svg>
+            <use href="./svg/Facebook.svg"></use>
+        </svg>
+
+        <svg>
+            <use href="./svg/Instagram.svg"></use>
+        </svg>
+
+
+    </section>
+
+
+    <section class="galery">
+        <ul>
+            <li>
+                <img src="./img/galery/Rectangle 14.png">
+                <div>
+                    <p>
+                        Торти
+                    </p>
+                    <img src="./img/galery/bttn more.png">
+                </div>
+            </li>
+
+            <li>Шу
+                <img src="./img/galery/Rectangle 15.png">
+            </li>
+
+            <li>Тістечка
+                <img src="./img/galery/Rectangle 16.png">
+            </li>
+
+            <li>Піца
+                <img src="./img/galery/Rectangle 7.png">
+            </li>
+
+        </ul>
+
+    </section>
+
+    <section class="bestsaller">
+        <h1>Бестселлери</h1>
+
+        <img src="./img/Best sellers/arrow left.svg">
+        <img src="./img/Best sellers/arrow right.svg">
+
+        <ul>
+            <li>
+                <img src="./img/Best sellers/Mousse cake Mango-Passionfruit.png">
+
+                <p>Мусовий торт “Манго-маракуйя”</p>
+
+                <span>1200 грн/ 3 кг</span>
+
+                <svg>
+                    <use href="./svg/symbol-defs.svg#icon-cart"></use>
+                </svg>
+            </li>
+            <li>
+                <img src="./img/Best sellers/Chocolate brownie.png">
+
+                <p>Шоколадне тістечко брауні</p>
+
+                <span>300 грн/ 3шт</span>
+
+                <svg>
+                    <use href="./svg/symbol-defs.svg#icon-cart"></use>
+                </svg>
+            </li>
+            <li>
+                <img src="./img/Best sellers/Shu pastries.png">
+
+                <p>Тістечка Шу</p>
+
+                <span>400 грн/ 6 шт</span>
+
+                <svg>
+                    <use href="./svg/symbol-defs.svg#icon-cart"></use>
+                </svg>
+            </li>
+            <li>
+                <img src="./img/Best sellers/Salted Caramel.png">
+
+                <p>Солона Карамель</p>
+
+                <span>270грн/ 450г</span>
+
+                <svg>
+                    <use href="./svg/symbol-defs.svg#icon-cart"></use>
+                </svg>
+            </li>
+        </ul>
+
+        <a>Переглянути весь асортимент</a>
+
+    </section>
+
+    <section class="grann">
+        <h1>Чому саме Grann?</h1>
+
+        <h3>ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
+        <p>Я замовляю продукти тільки у тих постачальників, які мають сертифікати якості.</p>
+
+        <img src="./img/чому grann/pict (13).png">
+
+        <h3>МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</h3>
+        <p>Якщо з якихось причин ви не вживаєте окремі продукти десерту, є можливість зробити замовлення згідно ваших
+            побажаннь.</p>
+
+        <h3>ЗРУЧНА ВАГА ТОРТУ</h3>
+        <p>Не обов'язково чекати на свято, щоб замовити смачненьке. Наша кондитерська робить мініторти і десерти.
+
+            Мінімальна вага замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8 кг.</p>
+
+        <img src="./img/чому grann/5 pict.png">
+
+    </section>
+
+    <section class="delivery">
+        <h1>Доставка і оплата</h1>
+
+        <ul>
+            <li>
+                <img src="./img/доставка і оплата/layer1.svg">
+                <h3>Самовивіз</h3>
+                <p>Самовивіз з Печерського р-ну, м. Київ</p>
+            </li>
+            <li>
+                <img src="./img/доставка і оплата/bike-delivery-icon 1.svg">
+                <h3>Доставка</h3>
+                <p>Доставка на таксі (за тарифами служби таксі)</p>
+            </li>
+            <li>
+                <img src="./img/доставка і оплата/cash-on-delivery-icon 1.svg">
+                <h3>Передплата</h3>
+                <p>Передплата на картку в розмірі 50% від суми замовлення</p>
+            </li>
+        </ul>
+    </section>
+
+    <section class="about-me">
+        <img src="./img/доставка і оплата/pict (14).png">
+        <img src="./img/доставка і оплата/name.png">
+
+        <h2>Анна Кострома</h2>
+        <span>Засновниця кондитерської Grann Pastry</span>
+        <p>Від хобі до власної справи.
+
+            Я закінчила DGF International Culinary School в Києві, а згодом навчалася в одній з найвідоміших шкіл
+            готельного сервісу і кулінарії в світі «Le Cordon Bleu» (Франція).Свою справу почала після того, як здобула
+            досвід і працювала в одному з найбільших кондитерських цехів Грузії (1500 кв.м.).
+
+            Наразі започаткувала особистий бренд і будую власний кондитерський цех.Моя робота мене надихає. Завдяки моїм
+            солодощам, я можу дарувати щасливі моменти для вас!</p>
+
+
+    </section>
+
+    <section class="register">
+
+        <img src="./img/давайте зробимо щось унікальне/DSC06440 1.png">
+        <p>Давайте зробимо щось унікальне разом!</p>
+        <p>Ви можете замовити свій власний рецепт десерту, який вам буде до вподоби. Заповніть заявку та я зв’яжусь з
+            вами, аби обговорити деталі замовлення.</p>
+    </section>
+
+    <section class="signup">
+
+        <label for="name"></label><br>
+        <input type="text" id="name" name="name" placeholder="Ім’я" required><br><br>
+
+        <label for="phone">Номер телефону:</label><br>
+        <input type="tel" id="phone" name="phone" placeholder="Номер телефону" required><br><br>
+
+        <label for="message"></label><br>
+        <textarea id="message" name="message" rows="15" cols="80"
+            placeholder="Опишіть ваші побажання"></textarea><br><br>
+
+        <button>Надіслати</button>
+    </section>
+
+    <section class="question">
+        <h2>Популярні запитання</h2>
+
+        <h3>СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?</h3>
+
+        <h3>ЧИ Є У ВАС ДОСТАВКА?</h3>
+        <h3>ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?</h3>
+        <h3>ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?</h3>
+
+    </section>
+
+    <section class="Instagram">
+        <h2>Instagram</h2>
+
+        <img src="./img/instaagram/1 (2).png">
+        <img src="./img/instaagram/1 (3).png">
+        <img src="./img/instaagram/2 (1).png">
+        <img src="./img/instaagram/2 (2).png">
+        <img src="./img/instaagram/3 (1).png">
+        <img src="./img/instaagram/3 (2).png">
+        <img src="./img/instaagram/Vector 34.png">
+
+        <button>Завітати на сторінку</button>
+
+
+        <img src="./img/instaagram/Vector 35.png">
+        <img src="./img/instaagram/Vector 36.png">
+
+    </section>
+    <footer>
+
+        <section class="footer">
+
+            <a>с. Хотів, вул. Партизанська 1А</a>
+            <a>Email: kostromaganna@gmail.com</a>
+            <a>Tel: +38(099) 987 62 40</a>
+            <img src="./img/footer/logoGrann 2.png">
+            <img src="./svg/Instagram footer (1).svg">
+            <img src="./svg/telegram footer(1).svg">
+            <img src="./svg/viber footer.svg">
+            <a>Політика конфіденційності</a>
+            <a>Договір оферти</a>
+
+
+        </section>
+
+    </footer>
+
 </body>
 
 </html>
