css головна сторінка

--- a/index.html
+++ b/index.html
@@ -14,25 +14,26 @@
 
         <ul class="menu">
             <li>
-                <a>
+                <a class="menu-link" href="#">
                     каталог
                 </a>
             </li>
+
             <li>
-                <a>
+                <a class="menu-link" href="#">
                     про мене
                 </a>
             </li>
 
-            <img src="img/heder/logoGrann 1.png">
+            <img class="menu-img" src="img/heder/logoGrann 1.png">
 
             <li>
-                <a>
+                <a class="menu-link" href="#">
                     доставка
                 </a>
             </li>
             <li>
-                <a>
+                <a class="menu-link" href="#">
                     контакт
                 </a>
             </li>
@@ -47,30 +48,43 @@
     </header>
 
     <section class="main">
-        <h1>
-            Авторскі десерти
-        </h1>
+        <div class="container">
+            <h1 class="main-title">
+                Авторскі десерти
+            </h1>
 
-        <img src="./img/heder/custard pudding.png">
-        <img src="./img/heder/circlet.png">
-        <img src="./img/heder/hardening.png">
-        <img src="./img/heder/mousse cakes.png">
+            <img class="pudding" src="./img/heder/custard pudding.png" />
+            <img class="circlet" src="./img/heder/circlet.png" />
+            <img class="hardening" src="./img/heder/hardening.png" />
+            <img class="cakes" src="./img/heder/mousse cakes.png" />
 
-        <p>Виготовляємо десерти під замовлення з любов’ю та користю</p>
+            <div class="vraper-social">
 
-        <svg>
-            <use href="./svg/telegram.svg">
-            </use>
-        </svg>
-        <svg>
-            <use href="./svg/Facebook.svg"></use>
-        </svg>
+                <p class="main-description-social">Виготовляємо десерти під замовлення з любов’ю та користю</p>
 
-        <svg>
-            <use href="./svg/Instagram.svg"></use>
-        </svg>
+                <ul class="social-list">
+                    <li>
+                        <svg class="contact">
+                            <use href="./svg/telegram.svg">
+                            </use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg class="contact">
+                            <use href="./svg/Facebook.svg"></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg class="contact">
+                            <use href="./svg/Instagram.svg"></use>
+                        </svg>
+                    </li>
 
+                </ul>
 
+            </div>
+
+        </div>
     </section>
 
 
