--- a/index.html
+++ b/index.html
@@ -89,131 +89,199 @@
 
 
     <section class="galery">
-        <ul>
-            <li>
-                <img src="./img/galery/Rectangle 14.png">
-                <div>
-                    <p>
-                        Торти
-                    </p>
-                    <img src="./img/galery/bttn more.png">
-                </div>
-            </li>
+        <div class="container">
 
-            <li>Шу
-                <img src="./img/galery/Rectangle 15.png">
-            </li>
+            <ul class="galery-name">
+                <li class="galery-photo">
+                    <div class="thumb">
+                        <img class="galery-img" src="./img/galery/Rectangle 7.png">
+                        <div class="galery-btn">
+                            <p class="label-list">Торти</p>
+                        </div>
+                        <img class="galery-btn-arrow" src="./img/galery/bttn more.png">
+                    </div>
+                </li>
 
-            <li>Тістечка
-                <img src="./img/galery/Rectangle 16.png">
-            </li>
+                <li class="galery-photo">
+                    <div class="thumb">
+                        <img class="galery-img" src="./img/galery/Rectangle 14.png">
+                        <div class="galery-btn">
+                            <p class="label-list">Шу</p>
+                        </div>
+                    </div>
+                </li>
 
-            <li>Піца
-                <img src="./img/galery/Rectangle 7.png">
-            </li>
+                <li class="galery-photo">
+                    <div class="thumb">
+                        <img class="galery-img" src="./img/galery/Rectangle 15.png">
+                        <div class="galery-btn">
+                            <p class="label-list">Тістечка</p>
+                        </div>
+                    </div>
+                </li>
 
+                <li class="galery-photo">
+                    <div class="thumb">
+                        <img class="galery-img" src="./img/galery/Rectangle 16.png">
+                        <div class="galery-btn">
+                            <p class="label-list">Піца</p>
+                        </div>
+                    </div>
+                </li>
+        </div>
         </ul>
+
+        </div>
 
     </section>
 
     <section class="bestsaller">
-        <h1>Бестселлери</h1>
+        <div class="container">
+            <h1 class="main-title">Бестселлери</h1>
 
-        <img src="./img/Best sellers/arrow left.svg">
-        <img src="./img/Best sellers/arrow right.svg">
+            <div class="bestsaller-arrows">
+                <img class="bestsaller-arrow-img" src="./img/Best sellers/arrow left.svg">
+                <img class="bestsaller-arrow-img" src="./img/Best sellers/arrow right.svg">
+            </div>
 
-        <ul>
-            <li>
-                <img src="./img/Best sellers/Mousse cake Mango-Passionfruit.png">
+            <ul class="bestsaller-name">
+                <li class="bestsaller-photo">
+                    <img class="bestsaller-img" src="./img/Best sellers/Mousse cake Mango-Passionfruit.png">
 
-                <p>Мусовий торт “Манго-маракуйя”</p>
+                    <div class="bestsaller-text-shop">
+                        <p class="bestsaller-text">Мусовий торт “Манго-маракуйя”</p>
 
-                <span>1200 грн/ 3 кг</span>
+                        <svg class="icon-card" width="50px" height="50px">
+                            <use href="./svg/symbol-defs.svg#icon-cart"></use>
+                        </svg>
+                    </div>
 
-                <svg>
-                    <use href="./svg/symbol-defs.svg#icon-cart"></use>
-                </svg>
-            </li>
-            <li>
-                <img src="./img/Best sellers/Chocolate brownie.png">
+                    <span class="bestsaller-price">1200 грн/ 3 кг</span>
 
-                <p>Шоколадне тістечко брауні</p>
+                </li>
+                <li class="bestsaller-photo">
+                    <img class="bestsaller-img" src="./img/Best sellers/Chocolate brownie.png">
 
-                <span>300 грн/ 3шт</span>
+                    <div class="bestsaller-text-shop">
+                        <p class="bestsaller-text">Шоколадне тістечко брауні</p>
 
-                <svg>
-                    <use href="./svg/symbol-defs.svg#icon-cart"></use>
-                </svg>
-            </li>
-            <li>
-                <img src="./img/Best sellers/Shu pastries.png">
+                        <svg class="icon-card" width="50px" height="50px">
+                            <use href="./svg/symbol-defs.svg#icon-cart"></use>
+                        </svg>
+                    </div>
 
-                <p>Тістечка Шу</p>
+                    <span class="bestsaller-price">300 грн/ 3шт</span>
 
-                <span>400 грн/ 6 шт</span>
+                </li>
+                <li class="bestsaller-photo">
+                    <img class="bestsaller-img" src="./img/Best sellers/Shu pastries.png">
 
-                <svg>
-                    <use href="./svg/symbol-defs.svg#icon-cart"></use>
-                </svg>
-            </li>
-            <li>
-                <img src="./img/Best sellers/Salted Caramel.png">
+                    <div class="bestsaller-text-shop">
+                        <p class="bestsaller-text">Тістечка Шу</p>
 
-                <p>Солона Карамель</p>
+                        <svg class="icon-card" width="50px" height="50px">
+                            <use href="./svg/symbol-defs.svg#icon-cart"></use>
+                        </svg>
+                    </div>
 
-                <span>270грн/ 450г</span>
+                    <span class="bestsaller-price">400 грн/ 6 шт</span>
 
-                <svg>
-                    <use href="./svg/symbol-defs.svg#icon-cart"></use>
-                </svg>
-            </li>
-        </ul>
 
-        <a>Переглянути весь асортимент</a>
+                </li>
+                <li class="bestsaller-photo">
+                    <img class="bestsaller-img bestsaller-img-caramel" src="./img/Best sellers/Salted Caramel.png">
 
+                    <div class="bestsaller-text-shop">
+                        <p class="bestsaller-text">Солона Карамель</p>
+
+                        <svg class="icon-card" width="50px" height="50px">
+                            <use href="./svg/symbol-defs.svg#icon-cart"></use>
+                        </svg>
+                    </div>
+
+                    <span class="bestsaller-price">270грн/ 450г</span>
+
+                </li>
+            </ul>
+
+            <div class="bestsaller-button-link">
+                <a class="bestsaller-button" href="#">Переглянути весь асортимент</a>
+            </div>
+
+        </div>
     </section>
 
     <section class="grann">
-        <h1>Чому саме Grann?</h1>
+        <div class="container">
+            <h1 class="main-title">Чому саме Grann?</h1>
 
-        <h3>ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
-        <p>Я замовляю продукти тільки у тих постачальників, які мають сертифікати якості.</p>
+            <div class="grann-main">
+                <h3 class="grann-text grann-photo-ingredient">ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
+                <p>Я замовляю продукти тільки у тих постачальників, які мають сертифікати якості.</p>
 
-        <img src="./img/чому grann/pict (13).png">
+                <img class="grann-photo" src="./img/чому grann/pict (13).png">
 
-        <h3>МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</h3>
-        <p>Якщо з якихось причин ви не вживаєте окремі продукти десерту, є можливість зробити замовлення згідно ваших
-            побажаннь.</p>
+                <h3 class="grann-text">МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</h3>
+                <p>Якщо з якихось причин ви не вживаєте окремі продукти десерту, є можливість зробити замовлення згідно
+                    ваших
+                    побажаннь.</p>
 
-        <h3>ЗРУЧНА ВАГА ТОРТУ</h3>
-        <p>Не обов'язково чекати на свято, щоб замовити смачненьке. Наша кондитерська робить мініторти і десерти.
+                <h3 class="grann-text">ЗРУЧНА ВАГА ТОРТУ</h3>
+                <p>Не обов'язково чекати на свято, щоб замовити смачненьке. Наша кондитерська робить мініторти і
+                    десерти.
 
-            Мінімальна вага замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8 кг.</p>
+                    Мінімальна вага замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8 кг.</p>
 
-        <img src="./img/чому grann/5 pict.png">
+
+
+            </div>
+        </div>
 
     </section>
 
-    <section class="delivery">
-        <h1>Доставка і оплата</h1>
+    <img class="grann-photo-down" src="./img/чому grann/5 pict.png">
 
-        <ul>
-            <li>
-                <img src="./img/доставка і оплата/layer1.svg">
-                <h3>Самовивіз</h3>
-                <p>Самовивіз з Печерського р-ну, м. Київ</p>
-            </li>
-            <li>
-                <img src="./img/доставка і оплата/bike-delivery-icon 1.svg">
-                <h3>Доставка</h3>
-                <p>Доставка на таксі (за тарифами служби таксі)</p>
-            </li>
-            <li>
-                <img src="./img/доставка і оплата/cash-on-delivery-icon 1.svg">
-                <h3>Передплата</h3>
-                <p>Передплата на картку в розмірі 50% від суми замовлення</p>
-            </li>
-        </ul>
+    <section class="delivery">
+        <div class="container">
+            <h1 class="main-title">Доставка і оплата</h1>
+            <div class="delivery-name">
+
+                <ul class="delivery-name">
+                    <li class="delivery-title">
+
+                        <div class="delivery-text-badges">
+                            <img class="delivery-photo" src="./img/доставка і оплата/layer1.svg">
+                        </div>
+
+                        <h3 class="delivery-text">Самовивіз</h3>
+
+
+                        <p class="delivery-description">Самовивіз з Печерського р-ну, м. Київ</p>
+                    </li>
+                    <li class="delivery-title">
+
+                        <div class="delivery-text-badges">
+                            <img class="delivery-photo" src="./img/доставка і оплата/bike-delivery-icon 1.svg">
+                        </div>
+                        <h3 class="delivery-text">Доставка</h3>
+
+
+                        <p class="delivery-description">Доставка на таксі (за тарифами служби таксі)</p>
+                    </li>
+                    <li class="delivery-title">
+
+                        <div class="delivery-text-badges">
+                            <img class="delivery-photo" src="./img/доставка і оплата/cash-on-delivery-icon 1.svg">
+                        </div>
+                        
+                        <h3 class="delivery-text">Передплата</h3>
+
+
+                        <p class="delivery-description">Передплата на картку в розмірі 50% від суми замовлення</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
 
     <section class="about-me">
