css дизайн першої сторінки по секцціяям

--- a/index.html
+++ b/index.html
@@ -239,7 +239,9 @@
 
     </section>
 
-    <img class="grann-photo-down" src="./img/чому grann/5 pict.png">
+    <div class="container">
+        <img class="grann-photo-down" src="./img/чому grann/5 pict.png">
+    </div>
 
     <section class="delivery">
         <div class="container">
@@ -273,7 +275,7 @@
                         <div class="delivery-text-badges">
                             <img class="delivery-photo" src="./img/доставка і оплата/cash-on-delivery-icon 1.svg">
                         </div>
-                        
+
                         <h3 class="delivery-text">Передплата</h3>
 
 
@@ -285,29 +287,46 @@
     </section>
 
     <section class="about-me">
-        <img src="./img/доставка і оплата/pict (14).png">
-        <img src="./img/доставка і оплата/name.png">
-
-        <h2>Анна Кострома</h2>
-        <span>Засновниця кондитерської Grann Pastry</span>
-        <p>Від хобі до власної справи.
-
-            Я закінчила DGF International Culinary School в Києві, а згодом навчалася в одній з найвідоміших шкіл
-            готельного сервісу і кулінарії в світі «Le Cordon Bleu» (Франція).Свою справу почала після того, як здобула
-            досвід і працювала в одному з найбільших кондитерських цехів Грузії (1500 кв.м.).
-
-            Наразі започаткувала особистий бренд і будую власний кондитерський цех.Моя робота мене надихає. Завдяки моїм
-            солодощам, я можу дарувати щасливі моменти для вас!</p>
+        <div class="container">
 
 
+            <img class="about-me-face" src="./img/доставка і оплата/pict (14).png">
+            <img class="about-me-photo" src="./img/доставка і оплата/name.png">
+
+
+
+            <div class="about-me-title">
+                <h2 class="about-me-name">Анна Кострома</h2>
+                <span class="about-me-description">Засновниця кондитерської Grann Pastry</span>
+            </div>
+
+            <div class="about-me-text">
+                <p>Від хобі до власної справи.
+
+                    Я закінчила DGF International Culinary School в Києві, а згодом навчалася в одній з найвідоміших
+                    шкіл
+                    готельного сервісу і кулінарії в світі «Le Cordon Bleu» (Франція).Свою справу почала після того, як
+                    здобула
+                    досвід і працювала в одному з найбільших кондитерських цехів Грузії (1500 кв.м.).
+
+                    Наразі започаткувала особистий бренд і будую власний кондитерський цех.Моя робота мене надихає.
+                    Завдяки
+                    моїм
+                    солодощам, я можу дарувати щасливі моменти для вас!</p>
+            </div>
+
+        </div>
     </section>
 
     <section class="register">
+        <div class="container">
 
         <img src="./img/давайте зробимо щось унікальне/DSC06440 1.png">
-        <p>Давайте зробимо щось унікальне разом!</p>
-        <p>Ви можете замовити свій власний рецепт десерту, який вам буде до вподоби. Заповніть заявку та я зв’яжусь з
+        <img class="register-photo-text" src="./img/давайте зробимо щось унікальне/Давайте зробимо щось унікальне разом!.png">
+        <!-- <p>Давайте зробимо щось унікальне разом!</p> -->
+        <p class="register-text">Ви можете замовити свій власний рецепт десерту, який вам буде до вподоби. Заповніть заявку та я зв’яжусь з
             вами, аби обговорити деталі замовлення.</p>
+            </div>
     </section>
 
     <section class="signup">
