--- a/index.html
+++ b/index.html
@@ -216,31 +216,39 @@
             <h1 class="main-title">Чому саме Grann?</h1>
 
             <div class="grann-main">
-                <h3 class="grann-text grann-photo-ingredient">ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
-                <p>Я замовляю продукти тільки у тих постачальників, які мають сертифікати якості.</p>
+                <p class="grann-text">ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</p>
+                <span class="grann-text-down">Я замовляю продукти тільки у тих постачальників, які мають сертифікати
+                    якості.</span>
+            </div>
 
-                <img class="grann-photo" src="./img/чому grann/pict (13).png">
+            <img class="grann-photo" src="./img/чому grann/pict (13).png">
 
-                <h3 class="grann-text">МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</h3>
-                <p>Якщо з якихось причин ви не вживаєте окремі продукти десерту, є можливість зробити замовлення згідно
+            <div class="grann-text-order">
+                <p class="grann-text">МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</p>
+                <span class="grann-text-down">Якщо з якихось причин ви не вживаєте окремі продукти десерту, є можливість
+                    зробити замовлення
+                    згідно
                     ваших
-                    побажаннь.</p>
+                    побажаннь.</span>
+            </div>
 
-                <h3 class="grann-text">ЗРУЧНА ВАГА ТОРТУ</h3>
-                <p>Не обов'язково чекати на свято, щоб замовити смачненьке. Наша кондитерська робить мініторти і
+            <div class="grann-text-weight">
+                <p class="grann-text">ЗРУЧНА ВАГА ТОРТУ</p>
+                <span class="grann-text-down">Не обов'язково чекати на свято, щоб замовити смачненьке. Наша кондитерська
+                    робить мініторти і
                     десерти.
 
-                    Мінімальна вага замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8 кг.</p>
-
-
-
+                    Мінімальна вага замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8 кг.</span>
             </div>
+
         </div>
 
     </section>
 
     <div class="container">
-        <img class="grann-photo-down" src="./img/чому grann/5 pict.png">
+        <div class="grann-photo-down">
+            <img src="./img/чому grann/5 pict.png">
+        </div>
     </div>
 
     <section class="delivery">
@@ -321,73 +329,112 @@
     <section class="register">
         <div class="container">
 
-        <img src="./img/давайте зробимо щось унікальне/DSC06440 1.png">
-        <img class="register-photo-text" src="./img/давайте зробимо щось унікальне/Давайте зробимо щось унікальне разом!.png">
-        <!-- <p>Давайте зробимо щось унікальне разом!</p> -->
-        <p class="register-text">Ви можете замовити свій власний рецепт десерту, який вам буде до вподоби. Заповніть заявку та я зв’яжусь з
-            вами, аби обговорити деталі замовлення.</p>
+            <img src="./img/давайте зробимо щось унікальне/DSC06440 1.png">
+            <img class="register-photo-text"
+                src="./img/давайте зробимо щось унікальне/Давайте зробимо щось унікальне разом!.png">
+            <!-- <p>Давайте зробимо щось унікальне разом!</p> -->
+            <p class="register-text">Ви можете замовити свій власний рецепт десерту, який вам буде до вподоби. Заповніть
+                заявку та я зв’яжусь з
+                вами, аби обговорити деталі замовлення.</p>
+
+
+
+            <!-- <section class="signup"> -->
+            <!-- <div class="container"> -->
+
+            <div class="signup">
+                <label class="signup-label" for="name"></label><br>
+                <input class="signup-input" type="text" id="name" name="name" placeholder="Ім’я" required><br><br>
+
+                <label class="signup-label" for="phone"></label><br>
+                <input input class="signup-input" type="tel" id="phone" name="phone" placeholder="Номер телефону"
+                    required><br><br>
+
+                <label class="signup-label" for="message"></label><br>
+                <textarea class="signup-textarea" id="message" name="message" rows="15" cols="80"
+                    placeholder="Опишіть ваші побажання"></textarea><br><br>
+
+                <button class="signup-btn">Надіслати</button>
+
             </div>
+            <!-- </div> -->
+        </div>
+
     </section>
-
-    <section class="signup">
-
-        <label for="name"></label><br>
-        <input type="text" id="name" name="name" placeholder="Ім’я" required><br><br>
-
-        <label for="phone">Номер телефону:</label><br>
-        <input type="tel" id="phone" name="phone" placeholder="Номер телефону" required><br><br>
-
-        <label for="message"></label><br>
-        <textarea id="message" name="message" rows="15" cols="80"
-            placeholder="Опишіть ваші побажання"></textarea><br><br>
-
-        <button>Надіслати</button>
-    </section>
+    <!-- </section> -->
 
     <section class="question">
-        <h2>Популярні запитання</h2>
+        <div class="container">
 
-        <h3>СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?</h3>
+            <h2 class="main-title">Популярні запитання</h2>
 
-        <h3>ЧИ Є У ВАС ДОСТАВКА?</h3>
-        <h3>ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?</h3>
-        <h3>ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?</h3>
+            <h3 class="question-text">СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?</h3>
 
-    </section>
+            <h3 class="question-text">ЧИ Є У ВАС ДОСТАВКА?</h3>
+            <h3 class="question-text">ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?</h3>
+            <h3 class="question-text">ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?</h3>
 
-    <section class="Instagram">
-        <h2>Instagram</h2>
-
-        <img src="./img/instaagram/1 (2).png">
-        <img src="./img/instaagram/1 (3).png">
-        <img src="./img/instaagram/2 (1).png">
-        <img src="./img/instaagram/2 (2).png">
-        <img src="./img/instaagram/3 (1).png">
-        <img src="./img/instaagram/3 (2).png">
-        <img src="./img/instaagram/Vector 34.png">
-
-        <button>Завітати на сторінку</button>
-
-
-        <img src="./img/instaagram/Vector 35.png">
-        <img src="./img/instaagram/Vector 36.png">
+        </div>
 
     </section>
+
+    <section class="instagram">
+        <div class="container">
+
+            <h2 class="main-title">Instagram</h2>
+
+            <div class="instagram-photo-title">
+
+                <img class="instagram-photo" src="./img/instaagram/1 (2).png">
+                <img class="instagram-photo" src="./img/instaagram/2 (1).png">
+                <img class="instagram-photo" src="./img/instaagram/3 (1).png">
+                <img class="instagram-photo" src="./img/instaagram/1 (3).png">
+                <img class="instagram-photo" src="./img/instaagram/2 (2).png">
+                <img class="instagram-photo" src="./img/instaagram/3 (2).png">
+
+            </div>
+
+            <div class="instagram-btn-all">
+
+                <img class="instagram-arrow" src="./img/instaagram/Vector 36.png">
+
+                <button class="instagram-btn">Завітати на сторінку</button>
+
+                <img class="instagram-pointer" src="./img/instaagram/Vector 34.png">
+                <img class="instagram-pointer-down" src="./img/instaagram/Vector 35.png">
+
+            </div>
+        </div>
+    </section>
+
     <footer>
 
         <section class="footer">
+            <div class="container">
+                <!-- <div class="container> -->
 
-            <a>с. Хотів, вул. Партизанська 1А</a>
-            <a>Email: kostromaganna@gmail.com</a>
-            <a>Tel: +38(099) 987 62 40</a>
-            <img src="./img/footer/logoGrann 2.png">
-            <img src="./svg/Instagram footer (1).svg">
-            <img src="./svg/telegram footer(1).svg">
-            <img src="./svg/viber footer.svg">
-            <a>Політика конфіденційності</a>
-            <a>Договір оферти</a>
+                <div class="footer-contact">
+                    <a class="footer-contact-link" href="">с. Хотів, вул. Партизанська 1А</a>
+                    <a class="footer-contact-link" href="">Email: kostromaganna@gmail.com</a>
+                    <a href="">Tel: +38(099) 987 62 40</a>
+                </div>
+
+                <img class="footer-title" src="./img/footer/logoGrann 2.png">
 
 
+                <div class="footer-right">
+                    <div class="footer-photo">
+                        <img src="./svg/Instagram footer (1).svg">
+                        <img src="./svg/telegram footer(1).svg">
+                        <img src="./svg/viber footer.svg">
+                    </div>
+
+                    <div class="footer-help">
+                        <a class="footer-link-help" href="">Політика конфіденційності</a>
+                        <a href="">Договір оферти</a>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </footer>
