product css властивості

--- a/product.html
+++ b/product.html
@@ -75,16 +75,16 @@
         </div>
     </section>
 
-    <section>
+    <section class="product-main">
 
-        <div class="container">
+        <div class="container container-product">
 
             <img src="./img/product/pict main.png">
 
             <div class="product-order">
                 <h1 class="product-title">Торт “Наполеон”</h1>
 
-                <ul>
+                <ul class="product-name">
                     <li>
                         ніжний заварний крем
                     </li>
@@ -98,9 +98,31 @@
                     </li>
                 </ul>
 
-                <button>Вид </button>
-                <button>Декор</button>
-                <button>Вага готового виробу</button>
+                <div class="product-btn-title">
+                    <label for="training-type">Вид </label><br><br>
+
+                    <div class="product-row">
+                        <select class="product-btn" id="training-type" name="training-type" required>
+                            <option value="view">Вид </option>
+                            <option value="functional">Функціональне тренування</option>
+                            <option value="crossfit">Кросфіт</option>
+                        </select><br><br>
+
+                        <select class="product-btn" id="training-type" name="training-type" required>
+                            <option value="view">Вид </option>
+                            <option value="functional">Функціональне тренування</option>
+                            <option value="crossfit">Кросфіт</option>
+                        </select><br><br>
+                    </div>
+
+                    <div class="product-row">
+                        <select class="product-btn" id="training-type" name="training-type" required>
+                            <option value="view">Вид </option>
+                            <option value="functional">Функціональне тренування</option>
+                            <option value="crossfit">Кросфіт</option>
+                        </select><br><br>
+                    </div>
+                </div>
 
                 <p>від</p>
 
