сторінка product css html властивості

--- a/product.html
+++ b/product.html
@@ -79,7 +79,19 @@
 
         <div class="container container-product">
 
-            <img src="./img/product/pict main.png">
+            <div class="product-img">
+                <img src="./img/product/pict main.png">
+
+                <div class="product-switch">
+                    <button class="product-nav">←</button>
+
+                    <img class="product-page" src="./img/product/1 (1).png">
+                    <img class="product-page" src="./img/product/1 (1).png">
+                    <img class="product-page" src="./img/product/1 (1).png">
+
+                    <button class="product-nav">→</button>
+                </div>
+            </div>
 
             <div class="product-order">
                 <h1 class="product-title">Торт “Наполеон”</h1>
@@ -99,7 +111,7 @@
                 </ul>
 
                 <div class="product-btn-title">
-                    <label for="training-type">Вид </label><br><br>
+                    <label for="training-type"></label><br><br>
 
                     <div class="product-row">
                         <select class="product-btn" id="training-type" name="training-type" required>
@@ -124,17 +136,32 @@
                     </div>
                 </div>
 
-                <p>від</p>
+                <div class="product-order-text">
+                    <p class="product-text">від</p>
 
-                <span>400 грн</span>
+                    <span class="product-text-sale">400 грн</span>
 
-                <button>Замовити</button>
+                    <button class="product-btn-order">Замовити</button>
+                </div>
+
+
+                <div>
+                    <h3>Опис</h3>
+                    <h3>Умови зберігання</h3>
+                    <h3>Доставка</h3>
+
+                    <p>Ніжний десерт, який знайомий усім нам з дитинства.<br>
+
+                        Ви маєте можливість замовити класичний торт без прикрас, або ж прикрасити його соковитими
+                        ягодами або карамеллю.<br>
+
+                        Не відмовляйте собі у спокусі скуштувати “Наполеон”! Ви маєте можливість замовити торт без
+                        цукру, без глютену та без лактози. </p>
+                </div>
 
             </div>
         </div>
     </section>
-
-
 
     <footer>
 
