дороблення всіх сторінок html css та добавлання js

--- a/catalog.html
+++ b/catalog.html
@@ -40,8 +40,10 @@
             </li>
 
             <svg class="icon icon-list" width="50px" height="50px">
-                <use href="./svg/symbol-defs.svg#icon-cart">
-                </use>
+                <a href="card.html">
+                    <use href="./svg/symbol-defs.svg#icon-cart">
+                    </use>
+                </a>
             </svg>
 
         </ul>
@@ -82,13 +84,13 @@
             <ul class="catalog-name">
                 <li class="catalog-photo">
 
-                    <a href="product.html">
+                    <a href="mango.html">
                         <img class="catalog-img" src="./img/catalog/mango passion fruit cake.png">
                     </a>
 
                     <div class="catalog-text-shop">
 
-                        <a href="product.html">
+                        <a href="mango.html">
                             <p class="catalog-text">Мусовий торт “Манго-маракуйя”</p>
                         </a>
 
@@ -101,8 +103,9 @@
 
                 </li>
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Chocolate cake with raspberries.png">
-
+                    <a href="chocolate.html">
+                        <img class="catalog-img" src="./img/catalog/Chocolate cake with raspberries.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Шоколадний торт з малиною</p>
 
@@ -115,8 +118,9 @@
 
                 </li>
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Kiwi-Passion Fruit Cake.png">
-
+                    <a href="kiwi.html">
+                        <img class="catalog-img" src="./img/catalog/Kiwi-Passion Fruit Cake.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Торт “Ківі-маракуйя”</p>
 
@@ -140,8 +144,9 @@
 
                 <!-- <ul class="catalog-name"> -->
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Snickers Cake.png">
-
+                    <a href="snickers.html">
+                        <img class="catalog-img" src="./img/catalog/Snickers Cake.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Торт “Снікерс”</p>
 
@@ -154,11 +159,15 @@
 
                 </li>
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Napoleon cake.png">
+
+                    <a href="product.html">
+                        <img class="catalog-img" src="./img/catalog/Napoleon cake.png">
+                    </a>
 
                     <div class="catalog-text-shop">
-                        <p class="catalog-text">Торт “Наполеон”</p>
-
+                        <a href="product.html">
+                            <p class="catalog-text">Торт “Наполеон”</p>
+                        </a>
                         <svg class="icon-card catalog-icon" width="50px" height="50px">
                             <use href="./svg/symbol-defs.svg#icon-cart"></use>
                         </svg>
@@ -168,7 +177,10 @@
 
                 </li>
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Tiramisu cake.png">
+
+                    <a href="tiramisu.html">
+                        <img class="catalog-img" src="./img/catalog/Tiramisu cake.png">
+                    </a>
 
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Торт “Тіраміссу”</p>
@@ -193,8 +205,9 @@
 
                 <!-- <ul class="catalog-name"> -->
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Honey Cake.png">
-
+                    <a href="honeycake.html">
+                        <img class="catalog-img" src="./img/catalog/Honey Cake.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Торт “Медовик”</p>
 
@@ -207,8 +220,10 @@
 
                 </li>
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Wafer-Nut Cake.png">
 
+                    <a href="waffle.html">
+                        <img class="catalog-img" src="./img/catalog/Wafer-Nut Cake.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Торт “Вафельно-горіховий”</p>
 
@@ -221,8 +236,10 @@
 
                 </li>
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Pistachio-Raspberry Cake.png">
 
+                    <a href="pistachio.html">
+                        <img class="catalog-img" src="./img/catalog/Pistachio-Raspberry Cake.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Торт “Фісташка-малина”</p>
 
@@ -246,8 +263,10 @@
 
                 <!-- <ul class="catalog-name"> -->
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/mango passion fruit cake.png">
 
+                    <a href="mango.html">
+                        <img class="catalog-img" src="./img/catalog/mango passion fruit cake.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Мусовий торт “Манго-маракуйя”</p>
 
@@ -260,8 +279,10 @@
 
                 </li>
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Chocolate cake with raspberries.png">
 
+                    <a href="chocolate.html">
+                        <img class="catalog-img" src="./img/catalog/Chocolate cake with raspberries.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Шоколадний торт з малиною</p>
 
@@ -274,8 +295,10 @@
 
                 </li>
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Kiwi-Passion Fruit Cake.png">
 
+                    <a href="kiwi.html">
+                        <img class="catalog-img" src="./img/catalog/Kiwi-Passion Fruit Cake.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Торт “Ківі-маракуйя”</p>
 
@@ -299,8 +322,9 @@
 
                 <!-- <ul class="catalog-name"> -->
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Snickers Cake.png">
-
+                    <a href="snickers.html">
+                        <img class="catalog-img" src="./img/catalog/Snickers Cake.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Торт “Снікерс”</p>
 
@@ -313,8 +337,9 @@
 
                 </li>
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Napoleon cake.png">
-
+                    <a href="product.html">
+                        <img class="catalog-img" src="./img/catalog/Napoleon cake.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Торт “Наполеон”</p>
 
@@ -327,8 +352,9 @@
 
                 </li>
                 <li class="catalog-photo">
-                    <img class="catalog-img" src="./img/catalog/Tiramisu cake.png">
-
+                    <a href="tiramisu.html">
+                        <img class="catalog-img" src="./img/catalog/Tiramisu cake.png">
+                    </a>
                     <div class="catalog-text-shop">
                         <p class="catalog-text">Торт “Тіраміссу”</p>
 
@@ -405,7 +431,7 @@
                         <li class="footer-help-bottom">
                             <a class="footer-link-help" href="#">Політика конфіденційності</a>
                         </li>
-                        <li>
+                        <li class="footer-contact-down">
                             <a class="footer-link-help footer-help-padding" href="#">Договір оферти</a>
                         </li>
                     </ul>
