--- a/index.html
+++ b/index.html
@@ -10,6 +10,44 @@
 
 <body class="body">
 
+    <header class="page-header">
+        <div class="container">
+            <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                        clip-rule="evenodd"></path>
+                </svg>
+            </button>
+
+            <ul class="menu">
+                <li><a href="catalog.html" class="link menu-link">каталог</a></li>
+                <li><a href="#about-me" class="link menu-link">про мене</a></li>
+
+                <li><a href="#delivery" class="link menu-link">доставка</a></li>
+                <li><a href="#footer" class="link menu-link">контакт</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+            <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                <path fill-rule="evenodd"
+                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                    clip-rule="evenodd"></path>
+            </svg>
+        </button>
+
+        <ul class="mobile-menu">
+            <li><a href="catalog.html" class="link menu-link">каталог</a></li>
+            <li><a href="#about-me" class="link menu-link">про мене</a></li>
+            <img class="menu-img" src="img/heder/logoGrann 1.png">
+            <li><a href="#delivery" class="link menu-link">доставка</a></li>
+            <li><a href="#footer" class="link menu-link">контакт</a></li>
+        </ul>
+    </div>
+
     <header>
 
         <ul class="menu">
@@ -38,18 +76,22 @@
                 </a>
             </li>
 
+
             <svg class="icon icon-list" width="50px" height="50px">
-                <use href="./svg/symbol-defs.svg#icon-cart">
-                </use>
+                <a href="card.html">
+                    <use href="./svg/symbol-defs.svg#icon-cart">
+                    </use>
+                </a>
             </svg>
 
         </ul>
 
     </header>
 
+
     <section class="main">
         <div class="container container-main">
-            <h1 class="main-title">
+            <h1 class="main-title-h1">
                 Авторскі десерти
             </h1>
 
@@ -178,7 +220,7 @@
 
                 </li>
                 <li class="bestsaller-photo">
-                    
+
                     <img class="bestsaller-img" src="./img/Best sellers/Chocolate brownie.png">
 
                     <div class="bestsaller-text-shop">
@@ -565,7 +607,7 @@
                         <li class="footer-help-bottom">
                             <a class="footer-link-help" href="#">Політика конфіденційності</a>
                         </li>
-                        <li>
+                        <li class="footer-contact-down">
                             <a class="footer-link-help footer-help-padding" href="#">Договір оферти</a>
                         </li>
                     </ul>
@@ -578,6 +620,10 @@
 
 
     <script src="accordion.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script src="burger-menu.js"></script>
 </body>
 
 </html>
