--- a/kiwi.html
+++ b/kiwi.html
@@ -82,7 +82,7 @@
         <div class="container container-product">
 
             <div class="product-img">
-                <img src="./img/product/pict main.png">
+                <img src="./img/catalog/Kiwi-Passion Fruit Cake.png">
 
                 <div class="product-switch">
                     <button class="product-nav">←</button>
@@ -96,7 +96,7 @@
             </div>
 
             <div class="product-order">
-                <h1 class="product-title">Торт “Наполеон”</h1>
+                <h1 class="product-title">Торт “Ківі-маракуйя”</h1>
 
                 <ul class="product-name">
                     <li>
