--- a/catalog.html
+++ b/catalog.html
@@ -10,34 +10,17 @@
 
 <body class="body">
 
-    <header>
+   <header>
+        <ul class="menu">
+            <li><a href="catalog.html" class="link menu-link">каталог</a></li>
+            <li><a href="#about-me" class="link menu-link">про мене</a></li>
 
-        <ul class="menu-catalog">
-            <li>
-                <a class="menu-link" href="catalog.html">
-                    каталог
-                </a>
-            </li>
-
-            <li>
-                <a class="menu-link" href="index.html#about-me">
-                    про мене
-                </a>
-            </li>
             <a href="index.html">
                 <img class="menu-img" src="img/heder/logoGrann 1.png">
             </a>
 
-            <li>
-                <a class="menu-link" href="index.html#delivery">
-                    доставка
-                </a>
-            </li>
-            <li>
-                <a class="menu-link" href="#footer">
-                    контакт
-                </a>
-            </li>
+            <li><a href="#delivery" class="link menu-link">доставка</a></li>
+            <li><a href="#footer" class="link menu-link">контакт</a></li>
 
             <svg class="icon icon-list" width="50px" height="50px">
                 <a href="card.html">
@@ -45,10 +28,47 @@
                     </use>
                 </a>
             </svg>
-
         </ul>
-
+        <!-- </div> -->
     </header>
+
+    <div class="page-header-phone">
+        <img class="phone-img" src="./img/phone/logoGrann 1.png">
+
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+            <svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                    clip-rule="evenodd"></path>
+            </svg>
+        </button>
+
+        <svg class="icon-phone icon-list" width="50px" height="50px">
+            <a href="card.html">
+                <use href="./svg/symbol-defs.svg#icon-cart">
+                </use>
+            </a>
+        </svg>
+    </div>
+
+
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+            <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                <path fill-rule="evenodd"
+                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                    clip-rule="evenodd"></path>
+            </svg>
+        </button>
+
+        <ul class="mobile-menu">
+            <li><a href="#bestsaller" class="link menu-link">Бестселлери</a></li>
+            <li><a href="catalog.html" class="link menu-link">Каталог</a></li>
+            <li><a href="#delivery" class="link menu-link">доставка</a></li>
+            <li><a href="#about-me" class="link menu-link">Про мене</a></li>
+            <img class="menu-img" src="./img/phone/pict.png">
+        </ul>
+    </div>
 
 
 
@@ -57,7 +77,7 @@
         <div class="container">
             <h1 class="main-title">Каталог</h1>
 
-            <ul class="catalog-btn-title">
+            <ul class="catalog-btn-list">
                 <li class="">
                     <button class="catalog-btn catalog-btn-color">Торти</button>
                 </li>
@@ -81,7 +101,7 @@
 
         <div class="container catalog-margin">
 
-            <ul class="catalog-name">
+            <ul class="catalog-list">
                 <li class="catalog-photo">
 
                     <a href="mango.html">
@@ -442,6 +462,12 @@
 
     </footer>
 
+
+    <script src="accordion.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script src="burger-menu.js"></script>
 </body>
 
 </html>
