--- a/index.html
+++ b/index.html
@@ -10,25 +10,47 @@
 
 <body class="body">
 
-    <header class="page-header">
-        <div class="container">
-            <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-                <svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                        d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                        clip-rule="evenodd"></path>
-                </svg>
-            </button>
+    <header>
+        <ul class="menu">
+            <li><a href="catalog.html" class="link menu-link">каталог</a></li>
+            <li><a href="#about-me" class="link menu-link">про мене</a></li>
 
-            <ul class="menu">
-                <li><a href="catalog.html" class="link menu-link">каталог</a></li>
-                <li><a href="#about-me" class="link menu-link">про мене</a></li>
+            <a href="index.html">
+                <img class="menu-img" src="img/heder/logoGrann 1.png">
+            </a>
 
-                <li><a href="#delivery" class="link menu-link">доставка</a></li>
-                <li><a href="#footer" class="link menu-link">контакт</a></li>
-            </ul>
-        </div>
+            <li><a href="#delivery" class="link menu-link">доставка</a></li>
+            <li><a href="#footer" class="link menu-link">контакт</a></li>
+
+            <svg class="icon icon-list" width="50px" height="50px">
+                <a href="card.html">
+                    <use href="./svg/symbol-defs.svg#icon-cart">
+                    </use>
+                </a>
+            </svg>
+        </ul>
+        <!-- </div> -->
     </header>
+
+    <div class="page-header-phone">
+        <img class="phone-img" src="./img/phone/logoGrann 1.png">
+
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+            <svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                    clip-rule="evenodd"></path>
+            </svg>
+        </button>
+
+        <svg class="icon-phone icon-list" width="50px" height="50px">
+            <a href="card.html">
+                <use href="./svg/symbol-defs.svg#icon-cart">
+                </use>
+            </a>
+        </svg>
+    </div>
+
 
     <div class="menu-container js-menu-container" id="mobile-menu">
         <button class="menu-toggle js-close-menu">
@@ -40,15 +62,16 @@
         </button>
 
         <ul class="mobile-menu">
-            <li><a href="catalog.html" class="link menu-link">каталог</a></li>
-            <li><a href="#about-me" class="link menu-link">про мене</a></li>
-            <img class="menu-img" src="img/heder/logoGrann 1.png">
+            <li><a href="#bestsaller" class="link menu-link">Бестселлери</a></li>
+            <li><a href="catalog.html" class="link menu-link">Каталог</a></li>
             <li><a href="#delivery" class="link menu-link">доставка</a></li>
-            <li><a href="#footer" class="link menu-link">контакт</a></li>
+            <li><a href="#about-me" class="link menu-link">Про мене</a></li>
+            <img class="menu-img" src="./img/phone/pict.png">
         </ul>
     </div>
 
-    <header>
+
+    <!-- <header>
 
         <ul class="menu">
             <li>
@@ -86,12 +109,12 @@
 
         </ul>
 
-    </header>
+    </header> -->
 
 
     <section class="main">
         <div class="container container-main">
-            <h1 class="main-title-h1">
+            <h1 class="main-title">
                 Авторскі десерти
             </h1>
 
@@ -189,7 +212,7 @@
 
     </section>
 
-    <section class="bestsaller">
+    <section id="bestsaller" class="bestsaller">
         <div class="container">
             <h1 class="main-title">Бестселлери</h1>
 
@@ -197,6 +220,8 @@
                 <img class="bestsaller-arrow-img" src="./img/Best sellers/arrow left.svg">
                 <img class="bestsaller-arrow-img" src="./img/Best sellers/arrow right.svg">
             </div>
+
+
 
             <ul class="bestsaller-name">
                 <li class="bestsaller-photo">
@@ -234,7 +259,7 @@
                     <span class="bestsaller-price">300 грн/ 3шт</span>
 
                 </li>
-                <li class="bestsaller-photo">
+                <li class="bestsaller-photo bestsaller-photo-hiden">
                     <img class="bestsaller-img" src="./img/Best sellers/Shu pastries.png">
 
                     <div class="bestsaller-text-shop">
@@ -248,7 +273,7 @@
                     <span class="bestsaller-price">400 грн/ 6 шт</span>
 
                 </li>
-                <li class="bestsaller-photo">
+                <li class="bestsaller-photo bestsaller-photo-hiden">
                     <img class="bestsaller-img bestsaller-img-caramel" src="./img/Best sellers/Salted Caramel.png">
 
                     <div class="bestsaller-text-shop">
@@ -263,6 +288,23 @@
 
                 </li>
             </ul>
+
+            <div>
+                <ul class="bestsaller-dots-name">
+                    <li class="bestsaller-dots">
+                        <img src="./img/phone/Ellipse 21.svg">
+                    </li>
+                    <li>
+                        <img src="./img/phone/Ellipse 22.svg">
+                    </li>
+                    <li>
+                        <img src="./img/phone/Ellipse 22.svg">
+                    </li>
+                    <li>
+                        <img src="./img/phone/Ellipse 22.svg">
+                    </li>
+                </ul>
+            </div>
 
             <div class="bestsaller-button-link">
                 <a class="bestsaller-button" href="catalog.html">Переглянути весь асортимент</a>
@@ -284,32 +326,35 @@
 
             <h1 class="main-title">Чому саме Grann?</h1>
 
-            <div class="grann-main">
-                <p class="grann-text">ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</p>
-                <span class="grann-text-down">Я замовляю продукти тільки у тих постачальників, які мають сертифікати
-                    якості.</span>
+            <div class="grann-phone">
+                <div class="grann-main">
+                    <p class="grann-text">ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</p>
+                    <span class="grann-text-down">Я замовляю продукти тільки у тих постачальників, які мають сертифікати
+                        якості.</span>
+                </div>
+
+                <img class="grann-photo" src="./img/чому grann/pict (13).png">
+
+                <div class="grann-text-order">
+                    <p class="grann-text">МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</p>
+                    <span class="grann-text-down">Якщо з якихось причин ви не вживаєте окремі продукти десерту, є
+                        можливість
+                        зробити замовлення
+                        згідно
+                        ваших
+                        побажаннь.</span>
+                </div>
+
+                <div class="grann-text-weight">
+                    <p class="grann-text">ЗРУЧНА ВАГА ТОРТУ</p>
+                    <span class="grann-text-down">Не обов'язково чекати на свято, щоб замовити смачненьке. Наша
+                        кондитерська
+                        робить мініторти і
+                        десерти.
+
+                        Мінімальна вага замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8 кг.</span>
+                </div>
             </div>
-
-            <img class="grann-photo" src="./img/чому grann/pict (13).png">
-
-            <div class="grann-text-order">
-                <p class="grann-text">МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</p>
-                <span class="grann-text-down">Якщо з якихось причин ви не вживаєте окремі продукти десерту, є можливість
-                    зробити замовлення
-                    згідно
-                    ваших
-                    побажаннь.</span>
-            </div>
-
-            <div class="grann-text-weight">
-                <p class="grann-text">ЗРУЧНА ВАГА ТОРТУ</p>
-                <span class="grann-text-down">Не обов'язково чекати на свято, щоб замовити смачненьке. Наша кондитерська
-                    робить мініторти і
-                    десерти.
-
-                    Мінімальна вага замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8 кг.</span>
-            </div>
-
         </div>
 
     </section>
@@ -317,7 +362,8 @@
     <section class="grann-photo-down">
         <div class="container">
             <div>
-                <img src="./img/чому grann/5 pict.png">
+                <img class="grann-img-down-phone" src="./img/чому grann/5 pict.png">
+                <img class="grann-img-down" src="./img/phone/pict (1).png">
             </div>
         </div>
     </section>
@@ -377,9 +423,11 @@
         <div class="container">
 
 
-            <img class="about-me-face" src="./img/доставка і оплата/pict (14).png">
-            <img class="about-me-photo" src="./img/доставка і оплата/name.png">
-
+            <div>
+                <h1 class="main-title-phone">Про мене</h1>
+                <img class="about-me-face" src="./img/доставка і оплата/pict (14).png">
+                <img class="about-me-photo" src="./img/доставка і оплата/name.png">
+            </div>
 
 
             <div class="about-me-title">
@@ -411,35 +459,36 @@
     <section class="register">
         <div class="container">
 
-            <img src="./img/давайте зробимо щось унікальне/DSC06440 1.png">
-            <img class="register-photo-text"
-                src="./img/давайте зробимо щось унікальне/Давайте зробимо щось унікальне разом!.png">
-            <!-- <p>Давайте зробимо щось унікальне разом!</p> -->
+            <div class="signup-block">
+                <div class="register-photo-title">
+                    <img class="register-photo-text" src="./img/register/Давайте зробимо щось унікальне разом!.png">
+                    <p class="register-text">Ви можете замовити свій власний рецепт десерту, який вам буде до вподоби.
+                        Заповніть
+                        заявку та я зв’яжусь з
+                        вами, аби обговорити деталі замовлення.</p>
+                </div>
 
-            <p class="register-text">Ви можете замовити свій власний рецепт десерту, який вам буде до вподоби. Заповніть
-                заявку та я зв’яжусь з
-                вами, аби обговорити деталі замовлення.</p>
+
+                <!-- <section class="signup"> -->
+                <!-- <div class="container"> -->
 
 
+                <form class="signup">
+                    <label class="signup-label" for="name"></label><br>
+                    <input class="signup-input" type="text" id="name" name="name" placeholder="Ім’я" required><br><br>
 
-            <!-- <section class="signup"> -->
-            <!-- <div class="container"> -->
+                    <label class="signup-label" for="phone"></label><br>
+                    <input input class="signup-input" type="tel" id="phone" name="phone" placeholder="Номер телефону"
+                        required><br><br>
 
-            <form class="signup">
-                <label class="signup-label" for="name"></label><br>
-                <input class="signup-input" type="text" id="name" name="name" placeholder="Ім’я" required><br><br>
+                    <label class="signup-label" for="message"></label><br>
+                    <textarea class="signup-textarea" id="message" name="message" rows="15" cols="80"
+                        placeholder="Опишіть ваші побажання"></textarea><br><br>
 
-                <label class="signup-label" for="phone"></label><br>
-                <input input class="signup-input" type="tel" id="phone" name="phone" placeholder="Номер телефону"
-                    required><br><br>
+                    <button class="signup-btn" type="submit">Надіслати</button>
 
-                <label class="signup-label" for="message"></label><br>
-                <textarea class="signup-textarea" id="message" name="message" rows="15" cols="80"
-                    placeholder="Опишіть ваші побажання"></textarea><br><br>
-
-                <button class="signup-btn" type="submit">Надіслати</button>
-
-            </form>
+                </form>
+            </div>
             <!-- </div> -->
         </div>
 
@@ -473,7 +522,7 @@
 
             <div class="accordion">
                 <div class="accordion-item">
-                    <div class="accordion-title">ЧИ Є У ВАС ДОСТАВКА?
+                    <div class=" accordion-title-phone">ЧИ Є У ВАС ДОСТАВКА?
                         <span class="arrow">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path d="M7 10l5 5 5-5z" />
@@ -491,7 +540,7 @@
 
             <div class="accordion">
                 <div class="accordion-item">
-                    <div class="accordion-title">ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?
+                    <div class="accordion-title ">ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?
                         <span class="arrow">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path d="M7 10l5 5 5-5z" />
@@ -544,6 +593,23 @@
 
             </div>
 
+            <div>
+                <ul class="instagram-dots-name">
+                    <li class="instagram-dots">
+                        <img src="./img/phone/Ellipse 21.svg">
+                    </li>
+                    <li>
+                        <img src="./img/phone/Ellipse 22.svg">
+                    </li>
+                    <li>
+                        <img src="./img/phone/Ellipse 22.svg">
+                    </li>
+                    <li>
+                        <img src="./img/phone/Ellipse 22.svg">
+                    </li>
+                </ul>
+            </div>
+
             <div class="instagram-btn-all">
 
                 <img class="instagram-arrow" src="./img/instaagram/Vector 36.png">
@@ -553,7 +619,18 @@
                 <img class="instagram-pointer" src="./img/instaagram/Vector 34.png">
                 <img class="instagram-pointer-down" src="./img/instaagram/Vector 35.png">
 
+                <div class="instagram-btn-arrows">
+                    <img class="instagram-arrow-img" src="./img/Best sellers/arrow left.svg">
+                    <img class="instagram-arrow-img" src="./img/Best sellers/arrow right.svg">
+                </div>
+
             </div>
+
+            <!-- <div class="instagram-btn-arrows">
+                <img class="instagram-arrow-img" src="./img/Best sellers/arrow left.svg">
+                <img class="instagram-arrow-img" src="./img/Best sellers/arrow right.svg">
+            </div> -->
+
         </div>
     </section>
 
