--- a/card.html
+++ b/card.html
@@ -33,8 +33,9 @@
     </header>
 
     <div class="page-header-phone">
-        <img class="phone-img" src="./img/phone/logoGrann 1.png">
-
+        <a href="index.html">
+            <img class="phone-img" src="./img/phone/logoGrann 1.png">
+        </a>
         <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd"
