--- a/mango.html
+++ b/mango.html
@@ -33,8 +33,9 @@
     </header>
 
     <div class="page-header-phone">
-        <img class="phone-img" src="./img/phone/logoGrann 1.png">
-
+        <a href="index.html">
+            <img class="phone-img" src="./img/phone/logoGrann 1.png">
+        </a>
         <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd"
@@ -168,9 +169,11 @@
                 </div>
 
                 <div class="product-order-text">
-                    <p class="product-text">від</p>
 
-                    <span class="product-text-sale">400 грн</span>
+                    <div class="product-text-sale-phone">
+                        <p class="product-text">від</p>
+                        <span class="product-text-sale">400 грн</span>
+                    </div>
 
                     <button class="button product-btn-order" data-action="open-modal">Замовити</button>
 
