--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <section id="bestsaller" class="bestsaller">
         <div class="container">
-            <h1 class="main-title">Бестселлери</h1>
+            <h1 class="main-title main-title-bestsaller">Бестселлери</h1>
 
             <div class="bestsaller-arrows">
                 <img class="bestsaller-arrow-img" src="./img/Best sellers/arrow left.svg">
@@ -498,7 +498,7 @@
     <section class="question">
         <div class="container">
 
-            <h2 class="main-title">Популярні запитання</h2>
+            <h2 class="main-title main-title-question">Популярні запитання</h2>
 
             <!-- <h3 class="question-text">СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?</h3> -->
 
