--- a/mango.html
+++ b/mango.html
@@ -183,27 +183,30 @@
 
                             <div class="modal-box">
 
-                                <img src="./img/card/pict.png">
+                                <div class="modal-box-info">
+                                    <img class="modal-img" src="./img/card/pict.png">
 
-                                <h3 class="modal-cake">Торт “Наполеон”</h3>
-
-
-                                <div class="modal-info">
-                                    <div class="modal-information">
-
-                                        <p>Вид:</p>
-                                        <p>Декор:</p>
-                                        <p>Вага:</p>
-
-                                    </div>
-
-                                    <div class="modal-information-text">
+                                    <div class="modal-info">
 
 
-                                        <span class="modal-span">Карамельний наполеон</span>
-                                        <span class="modal-span">Без декору</span>
-                                        <span>1 кг</span>
 
+
+                                        <div class="modal-information-box">
+                                            <h3 class="modal-cake">Торт “Наполеон”</h3>
+                                            <div class="modal-block">
+                                                <div class="modal-information">
+                                                    <p>Вид:</p>
+                                                    <p>Декор:</p>
+                                                    <p>Вага:</p>
+                                                </div>
+
+                                                <div class="modal-information-text">
+                                                    <span class="modal-span">Карамельний наполеон</span>
+                                                    <span class="modal-span">Без декору</span>
+                                                    <span>1 кг</span>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
 
