--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                 </a>
             </svg>
         </ul>
-        <!-- </div> -->
     </header>
 
     <div class="page-header-phone">
@@ -70,48 +69,6 @@
         </ul>
     </div>
 
-
-    <!-- <header>
-
-        <ul class="menu">
-            <li>
-                <a class="menu-link" href="catalog.html">
-                    каталог
-                </a>
-            </li>
-
-            <li>
-                <a class="menu-link" href="#about-me">
-                    про мене
-                </a>
-            </li>
-
-            <img class="menu-img" src="img/heder/logoGrann 1.png">
-
-            <li>
-                <a class="menu-link" href="#delivery">
-                    доставка
-                </a>
-            </li>
-            <li>
-                <a class="menu-link" href="#footer">
-                    контакт
-                </a>
-            </li>
-
-
-            <svg class="icon icon-list" width="50px" height="50px">
-                <a href="card.html">
-                    <use href="./svg/symbol-defs.svg#icon-cart">
-                    </use>
-                </a>
-            </svg>
-
-        </ul>
-
-    </header> -->
-
-
     <section class="main">
         <div class="container container-main">
             <h1 class="main-title">
@@ -151,7 +108,6 @@
 
         </div>
 
-
     </section>
 
     <div class="custom-shape-divider-top-1759830817">
@@ -161,9 +117,6 @@
                 class="shape-fill"></path>
         </svg>
     </div>
-
-
-
 
     <section class="galery">
         <div class="container">
@@ -454,7 +407,6 @@
 
         </div>
     </section>
-    <!-- </a>  -->
 
     <section class="register">
         <div class="container">
@@ -467,11 +419,6 @@
                         заявку та я зв’яжусь з
                         вами, аби обговорити деталі замовлення.</p>
                 </div>
-
-
-                <!-- <section class="signup"> -->
-                <!-- <div class="container"> -->
-
 
                 <form class="signup">
                     <label class="signup-label" for="name"></label><br>
@@ -489,18 +436,14 @@
 
                 </form>
             </div>
-            <!-- </div> -->
         </div>
 
     </section>
-    <!-- </section> -->
 
     <section class="question">
         <div class="container">
 
             <h2 class="main-title main-title-question">Популярні запитання</h2>
-
-            <!-- <h3 class="question-text">СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?</h3> -->
 
             <div class="accordion">
                 <div class="accordion-item">
@@ -518,8 +461,6 @@
                 </div>
             </div>
 
-            <!-- <h3 class="question-text">ЧИ Є У ВАС ДОСТАВКА?</h3> -->
-
             <div class="accordion">
                 <div class="accordion-item">
                     <div class="accordion-title accordion-title-phone">ЧИ Є У ВАС ДОСТАВКА?
@@ -536,7 +477,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <h3 class="question-text">ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?</h3> -->
 
             <div class="accordion">
                 <div class="accordion-item">
@@ -554,7 +494,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <h3 class="question-text">ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?</h3> -->
 
             <div class="accordion">
                 <div class="accordion-item">
@@ -623,14 +562,7 @@
                     <img class="instagram-arrow-img" src="./img/Best sellers/arrow left.svg">
                     <img class="instagram-arrow-img" src="./img/Best sellers/arrow right.svg">
                 </div>
-
             </div>
-
-            <!-- <div class="instagram-btn-arrows">
-                <img class="instagram-arrow-img" src="./img/Best sellers/arrow left.svg">
-                <img class="instagram-arrow-img" src="./img/Best sellers/arrow right.svg">
-            </div> -->
-
         </div>
     </section>
 
@@ -638,57 +570,57 @@
 
         <section id="footer" class="footer">
             <div class="container">
-                <!-- <div class="container> -->
+                <div class="footer-fool">
+                    <div class="footer-contact">
+                        <ul>
+                            <li class="footer-contacts">
+                                <a class="footer-contact-link" href="#">с. Хотів, вул. Партизанська 1А</a>
+                            </li>
+                            <li class="footer-contacts">
+                                <a class="footer-contact-link" href="#">Email: kostromaganna@gmail.com</a>
+                            </li>
+                            <li class="footer-contact-bottom">
+                                <a class="footer-contact-link footer-padding" href="#">Tel: +38(099) 987 62 40</a>
+                            </li>
+                        </ul>
+                    </div>
 
-                <div class="footer-contact">
-                    <ul>
-                        <li class="footer-contacts">
-                            <a class="footer-contact-link" href="#">с. Хотів, вул. Партизанська 1А</a>
-                        </li>
-                        <li class="footer-contacts">
-                            <a class="footer-contact-link" href="#">Email: kostromaganna@gmail.com</a>
-                        </li>
-                        <li class="footer-contact-bottom">
-                            <a class="footer-contact-link footer-padding" href="#">Tel: +38(099) 987 62 40</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <a href="index.html">
-                    <img class="footer-title" src="./img/footer/logoGrann 2.png">
-                </a>
+                    <a href="index.html">
+                        <img class="footer-title" src="./img/footer/logoGrann 2.png">
+                    </a>
 
 
-                <div class="footer-right-photo">
+                    <div class="footer-right-photo">
 
-                    <ul class="footer-right">
-                        <li class="footer-photo">
-                            <a href="#">
-                                <img src="./svg/Instagram footer (1).svg">
-                            </a>
-                        </li>
-                        <li class="footer-photo">
-                            <a href="#">
-                                <img src="./svg/telegram footer(1).svg">
-                            </a>
-                        </li>
-                        <li class="footer-photo">
-                            <a href="#">
-                                <img src="./svg/viber footer.svg">
-                            </a>
-                        </li>
+                        <ul class="footer-right">
+                            <li class="footer-photo">
+                                <a href="#">
+                                    <img src="./svg/Instagram footer (1).svg">
+                                </a>
+                            </li>
+                            <li class="footer-photo">
+                                <a href="#">
+                                    <img src="./svg/telegram footer(1).svg">
+                                </a>
+                            </li>
+                            <li class="footer-photo">
+                                <a href="#">
+                                    <img src="./svg/viber footer.svg">
+                                </a>
+                            </li>
 
-                    </ul>
+                        </ul>
 
-                    <ul class="footer-help">
-                        <li class="footer-help-bottom">
-                            <a class="footer-link-help" href="#">Політика конфіденційності</a>
-                        </li>
-                        <li class="footer-contact-down">
-                            <a class="footer-link-help footer-help-padding" href="#">Договір оферти</a>
-                        </li>
-                    </ul>
+                        <ul class="footer-help">
+                            <li class="footer-help-bottom">
+                                <a class="footer-link-help" href="#">Політика конфіденційності</a>
+                            </li>
+                            <li class="footer-contact-down">
+                                <a class="footer-link-help footer-help-padding" href="#">Договір оферти</a>
+                            </li>
+                        </ul>
 
+                    </div>
                 </div>
             </div>
         </section>
