--- a/tiramisu.html
+++ b/tiramisu.html
@@ -62,10 +62,10 @@
         </button>
 
         <ul class="mobile-menu">
-            <li><a href="#bestsaller" class="link menu-link">Бестселлери</a></li>
+            <li><a href="/index.html#bestsaller" class="link menu-link">Бестселлери</a></li>
             <li><a href="catalog.html" class="link menu-link">Каталог</a></li>
-            <li><a href="#delivery" class="link menu-link">доставка</a></li>
-            <li><a href="#about-me" class="link menu-link">Про мене</a></li>
+            <li><a href="/index.html#delivery" class="link menu-link">доставка</a></li>
+            <li><a href="/index.html#about-me" class="link menu-link">Про мене</a></li>
             <img class="menu-img" src="./img/phone/pict.png">
         </ul>
     </div>
