--- a/mango.html
+++ b/mango.html
@@ -319,7 +319,7 @@
 
                     <div class="catalog-text-shop">
 
-                        <a class="product-href" href="product.html">
+                        <a class="product-href" href="tiramisu.html">
                             <p class="catalog-text">Торт “Тіраміссу”</p>
                         </a>
 
@@ -340,7 +340,7 @@
 
                     <div class="catalog-text-shop">
 
-                        <a class="product-href" href="product.html">
+                        <a class="product-href" href="snickers.html">
                             <p class="catalog-text">Торт “Снікерс”</p>
                         </a>
 
@@ -361,7 +361,7 @@
 
                     <div class="catalog-text-shop">
 
-                        <a class="product-href" href="product.html">
+                        <a class="product-href" href="mango.html">
                             <p class="catalog-text">Мусовий торт “Манго-маракуйя”</p>
                         </a>
 
