--- a/honeycake.html
+++ b/honeycake.html
@@ -312,7 +312,7 @@
 
                     <div class="catalog-text-shop">
 
-                        <a class="product-href" href="product.html">
+                        <a class="product-href" href="tiramisu.html">
                             <p class="catalog-text">Торт “Тіраміссу”</p>
                         </a>
 
@@ -333,7 +333,7 @@
 
                     <div class="catalog-text-shop">
 
-                        <a class="product-href" href="product.html">
+                        <a class="product-href" href="snickers.html">
                             <p class="catalog-text">Торт “Снікерс”</p>
                         </a>
 
@@ -354,7 +354,7 @@
 
                     <div class="catalog-text-shop">
 
-                        <a class="product-href" href="product.html">
+                        <a class="product-href" href="mango.html">
                             <p class="catalog-text">Мусовий торт “Манго-маракуйя”</p>
                         </a>
 
