--- a/snickers.html
+++ b/snickers.html
@@ -313,7 +313,7 @@
 
                     <div class="catalog-text-shop">
 
-                        <a class="product-href" href="product.html">
+                        <a class="product-href" href="tiramisu.html">
                             <p class="catalog-text">Торт “Тіраміссу”</p>
                         </a>
 
@@ -334,7 +334,7 @@
 
                     <div class="catalog-text-shop">
 
-                        <a class="product-href" href="product.html">
+                        <a class="product-href" href="snickers.html">
                             <p class="catalog-text">Торт “Снікерс”</p>
                         </a>
 
@@ -355,7 +355,7 @@
 
                     <div class="catalog-text-shop">
 
-                        <a class="product-href" href="product.html">
+                        <a class="product-href" href="mango.html">
                             <p class="catalog-text">Мусовий торт “Манго-маракуйя”</p>
                         </a>
 
